<resources>
    <string name="app_name">DissSpoonacular</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_a_member_register_here">Not a member? Register here</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="use_my_fitbit">Use My Fitbit</string>
    <string name="input_my_data">Input My Data</string>
    <string name="my_favourites">My Favourites</string>
    <string name="settings">Settings</string>
    <string name="height_and_weight">Height and Weight</string>
    <string name="no_BMR">\"Cannot calculate Daily Goal At this time \"</string>
    <string name="ingredients">Ingredients</string>
    <string name="next">Next</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="ketonic">Ketonic</string>
    <string name="none">None</string>
    <string name="gender">Gender</string>
    <string name="please_pick_your_gender">Please Pick Your Gender</string>
    <string name="select_your_date_of_birth">Select Your Date Of Birth</string>
    <string name="enter_your_height">Enter Your height</string>
    <string name="ft">Ft</string>
    <string name="inch">Inch</string>
    <string name="enter_your_weight">Enter your Weight</string>
    <string name="kgs">Kgs</string>
    <string name="_75">75</string>
    <string name="e_g_0">E.g. 0</string>
    <string name="e_g_6">E.g. 6</string>
    <string name="select_any_food_intolerances">Select Any Food Intolerances</string>
    <string name="finish">Finish</string>
    <string name="no_intolerances">No Intolerances</string>
    <string name="wheat">Wheat</string>
    <string name="tree_nut">Tree Nut</string>
    <string name="sulfite">Sulfite</string>
    <string name="soy">Soy</string>
    <string name="seafood">Seafood</string>
    <string name="sesame">Sesame</string>
    <string name="shell">Shell</string>
    <string name="peanut">Peanut</string>
    <string name="grain">Grain</string>
    <string name="gluten">Gluten</string>
    <string name="egg">Egg</string>
    <string name="dairy">Dairy</string>
    <string name="what_is_your_weight_goal">What is your weight goal</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="what_is_your_current_activity_level">What is your current activity level</string>
    <string name="if_you_are_sedentary_little_or_no_exercise">If you are sedentary (little or no exercise)</string>
    <string name="if_you_are_lightly_active_light_exercise_sports_1_3_days_week">If you are lightly active (light exercise/sports 1-3 days/week)</string>
    <string name="if_you_are_moderately_active_moderate_exercise_sports_3_5_days_week">If you are moderately active (moderate exercise/sports 3-5 days/week)</string>
    <string name="if_you_are_very_active_hard_exercise_sports_6_7_days_a_week">If you are very active (hard exercise/sports 6-7 days a week)</string>
    <string name="here">Here</string>
    <string name="close">Close</string>
    <string name="great_last_workout">Great Last Workout!</string>
    <string name="finished_a_workout">Finished a Workout</string>
    <string name="enter_the_number_of_calories_you_burned_or_alternatively_integrate_opti_myse_recovery_with_your_fitbit_account_for_a_realtime_update_on_your_latest_actvity">Enter the number of calories you burned or alternatively integrate Opti-Myse Recovery with your Fitbit account for a realtime update on your latest actvity</string>
    <string name="back">Back</string>
    <string name="studies_have_shown_that_to_get_the_best_results_from_your_workout_depends_on_the_food_that_we_put_back_into_our_bodies_by_using_a_few_details_you_provide_we_can_calculate_the_perfect_nutritional_breakdown_tailored_to_your_needs">Studies have shown that to get the best results from your workout depends on the food that we put back into our bodies. By using a few details you provide we can calculate the perfect nutritional breakdown tailored to your needs</string>
    <string name="get_delicious_recipe_ideas">Get Delicious Recipe Ideas</string>
    <string name="done">Done</string>
    <string name="check_out_these_delicious_recipe_ideas_tailored_to_your_requirements">Check out these delicious recipe ideas-Tailored to your requirements!</string>
    <string name="go">Go</string>
    <string name="calories">Calories</string>
    <string name="custom_input">Custom Input</string>
    <string name="register_here">Register Here</string>
    <string name="todays_calorie_goal">Todays Calorie Goal!</string>
    <string name="select_diets">Select any Dietary Requirements</string>
    <string name="finished_workout">Finished a Workout?</string>
    <string name="need_replenishing">Need Replenishing?</string>
    <string name="we_then_use_that_value_to_work_out_the_best_macro_nutrient_breakdown_based_on_your_goals">We then use that value to work out the best macro-nutrient breakdown based on your goals</string>
    <string name="all_you_have_to_do_is_pick_one">All you have to do is pick one!</string>
    <string name="opti_myse">Opti-Myse Recovery</string>
    >
</resources>