<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fitbitwhite"
    tools:context=".user.IntolerancesActivity">

    <TextView
        android:id="@+id/IntolerancesID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:textColor="@color/fitbitGreen"
        android:text="@string/select_any_food_intolerances"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/dairy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/IntolerancesID"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onButtonClicked"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/dairy" />

    <CheckBox
        android:id="@+id/egg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dairy"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onButtonClicked"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/egg" />

    <CheckBox
        android:id="@+id/gluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/egg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/gluten" />

    <CheckBox
        android:id="@+id/grain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/gluten"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/grain" />

    <CheckBox
        android:id="@+id/peanut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/grain"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/peanut" />

    <CheckBox
        android:id="@+id/shell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/peanut"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/shell" />

    <CheckBox
        android:id="@+id/sesame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/shell"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/sesame" />

    <CheckBox
        android:id="@+id/sea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/sesame"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/seafood" />

    <CheckBox
        android:id="@+id/soy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/sea"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/soy" />

    <CheckBox
        android:id="@+id/sulfite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/soy"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/sulfite" />

    <CheckBox
        android:id="@+id/tree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/sulfite"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/tree_nut" />

    <CheckBox
        android:id="@+id/wheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/tree"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/wheat" />

    <CheckBox
        android:id="@+id/no_intolerances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        app:layout_constraintTop_toBottomOf="@+id/wheat"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/no_intolerances" />

    <Button
        android:id="@+id/button_finish_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_shape"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="32dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>