<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fitbitwhite"
    tools:context=".user.DietaryRequirementsActivity">


    <TextView
        android:id="@+id/requirementsID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_diets"
        android:textSize="32sp"
        android:textColor="@color/fitbitGreen"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="45dp"/>

    <RadioGroup
        android:id="@+id/dietRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/requirementsID">

        <RadioButton
            android:id="@+id/vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/vegetarian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requirementsID" />

        <RadioButton
            android:id="@+id/vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:text="@string/vegan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vegetarian" />

        <RadioButton
            android:id="@+id/gluten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:text="@string/gluten_free"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vegan" />

        <RadioButton
            android:id="@+id/pesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/pescetarian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gluten" />

        <RadioButton
            android:id="@+id/keto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/ketonic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pesc" />

        <RadioButton
            android:id="@+id/no_requirements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onRadioButtonClicked"
            android:textSize="24sp"
            android:text="@string/none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keto" />

    </RadioGroup>

    <Button
        android:id="@+id/nextDiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>