<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.ThirdOnboarding"
    android:padding="16dp"
    android:background="@drawable/fitbitwhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:src="@drawable/recipe_lists"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/get_delicious_recipe_ideas"
        android:textColor="@color/fitbitGreen"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:text="@string/all_you_have_to_do_is_pick_one"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideThreeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/slideThreeDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/done"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>


</LinearLayout>